[gd_scene load_steps=3 format=3 uid="uid://d0ip1x5wcvh0p"]

[ext_resource type="Script" uid="uid://cotxvxplusyax" path="res://scripts/menu.gd" id="1_yqeox"]
[ext_resource type="Script" uid="uid://swo0eogwy4ix" path="res://scripts/temp_popup.gd" id="3_mhnvy"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_yqeox")

[node name="CenterContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_vertical = 2

[node name="HelpButton" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 2
text = "?"

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Obacht, eine Wegbiegung!"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 10
text = "stgs"

[node name="SlotVBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/SlotVBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerSlot0" type="Button" parent="CenterContainer/SlotVBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
text = "click to join"

[node name="PlayerSlot1" type="Button" parent="CenterContainer/SlotVBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
text = "click to join"

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/SlotVBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerSlot2" type="Button" parent="CenterContainer/SlotVBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
text = "click to join"

[node name="PlayerSlot3" type="Button" parent="CenterContainer/SlotVBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
text = "click to join"

[node name="HBoxContainer4" type="HBoxContainer" parent="CenterContainer/SlotVBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerSlot4" type="Button" parent="CenterContainer/SlotVBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
text = "click to join"

[node name="PlayerSlot5" type="Button" parent="CenterContainer/SlotVBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
text = "click to join"

[node name="HBoxContainer5" type="HBoxContainer" parent="CenterContainer/SlotVBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerSlot6" type="Button" parent="CenterContainer/SlotVBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
text = "click to join"

[node name="PlayerSlot7" type="Button" parent="CenterContainer/SlotVBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
text = "click to join"

[node name="HBoxContainerBottom" type="MarginContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_bottom = 30

[node name="StartButton" type="Button" parent="CenterContainer/HBoxContainerBottom"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
text = "start game"

[node name="SettingsPopup" type="Popup" parent="."]
auto_translate_mode = 1

[node name="Label" type="Label" parent="SettingsPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ðŸš§under constructionðŸš§"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HelpPopup" type="Popup" parent="."]
auto_translate_mode = 1
size = Vector2i(592, 133)

[node name="Label" type="Label" parent="HelpPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Pick a slot to join as a player and choose your own name, color, and controls.

Hit [start game] when ready.
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TempPopup" type="Popup" parent="."]
size = Vector2i(708, 352)
visible = true
script = ExtResource("3_mhnvy")

[node name="MarginContainer" type="MarginContainer" parent="TempPopup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -152.0
offset_right = 300.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TempPopup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameEdit" type="LineEdit" parent="TempPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "type name..."
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TempPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "[color]"
horizontal_alignment = 1

[node name="ColorGrid" type="GridContainer" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 4

[node name="ColorButton" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="ColorButton1" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="ColorButton2" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="ColorButton3" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="ColorButton4" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="ColorButton5" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="ColorButton6" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="ColorButton7" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "[keys]"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="KeyGrid" type="GridContainer" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
columns = 3

[node name="LeftKeyButton" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer/KeyGrid"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "left"

[node name="ItemKeyButton" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer/KeyGrid"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "item"

[node name="RightKeyButton" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer/KeyGrid"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "right"

[node name="KeyHint" type="Label" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Press any key..."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="CancelButton" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "cancel"

[node name="ConfirmButton" type="Button" parent="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 2
text = "confirm"

[connection signal="pressed" from="CenterContainer/HBoxContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/SlotVBoxContainer/HBoxContainer2/PlayerSlot0" to="." method="_on_player_slot_pressed" binds= [0]]
[connection signal="pressed" from="CenterContainer/SlotVBoxContainer/HBoxContainer2/PlayerSlot1" to="." method="_on_player_slot_pressed" binds= [1]]
[connection signal="pressed" from="CenterContainer/SlotVBoxContainer/HBoxContainer3/PlayerSlot2" to="." method="_on_player_slot_pressed" binds= [2]]
[connection signal="pressed" from="CenterContainer/SlotVBoxContainer/HBoxContainer3/PlayerSlot3" to="." method="_on_player_slot_pressed" binds= [3]]
[connection signal="pressed" from="CenterContainer/SlotVBoxContainer/HBoxContainer4/PlayerSlot4" to="." method="_on_player_slot_pressed" binds= [4]]
[connection signal="pressed" from="CenterContainer/SlotVBoxContainer/HBoxContainer4/PlayerSlot5" to="." method="_on_player_slot_pressed" binds= [5]]
[connection signal="pressed" from="CenterContainer/SlotVBoxContainer/HBoxContainer5/PlayerSlot6" to="." method="_on_player_slot_pressed" binds= [6]]
[connection signal="pressed" from="CenterContainer/SlotVBoxContainer/HBoxContainer5/PlayerSlot7" to="." method="_on_player_slot_pressed" binds= [7]]
[connection signal="pressed" from="CenterContainer/HBoxContainerBottom/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid/ColorButton" to="TempPopup" method="_on_color_button_pressed" binds= [0]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid/ColorButton1" to="TempPopup" method="_on_color_button_pressed" binds= [1]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid/ColorButton2" to="TempPopup" method="_on_color_button_pressed" binds= [2]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid/ColorButton3" to="TempPopup" method="_on_color_button_pressed" binds= [3]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid/ColorButton4" to="TempPopup" method="_on_color_button_pressed" binds= [4]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid/ColorButton5" to="TempPopup" method="_on_color_button_pressed" binds= [5]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid/ColorButton6" to="TempPopup" method="_on_color_button_pressed" binds= [6]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ColorGrid/ColorButton7" to="TempPopup" method="_on_color_button_pressed" binds= [7]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer/KeyGrid/LeftKeyButton" to="TempPopup" method="_on_key_button_pressed" binds= [0]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer/KeyGrid/ItemKeyButton" to="TempPopup" method="_on_key_button_pressed" binds= [1]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/MarginContainer/KeyGrid/RightKeyButton" to="TempPopup" method="_on_key_button_pressed" binds= [2]]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="TempPopup" method="_on_cancel_button_pressed"]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_setup_popup_confirmed"]
[connection signal="pressed" from="TempPopup/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="TempPopup" method="_on_confirm_button_pressed"]
